--- a/member/pom.xml
+++ b/member/pom.xml
@@ -45,6 +45,9 @@
         <druid.version>1.0.27</druid.version>
         <mysql.version>6.0.5</mysql.version>
         <javax.inject.version>1</javax.inject.version>
+        <commons-lang3.version>3.5</commons-lang3.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
+        <fastjson.version>1.2.23</fastjson.version>
     </properties>
 
     <dependencyManagement>
@@ -62,6 +65,25 @@
                 <groupId>org.medicinefreedom</groupId>
                 <artifactId>member-service-api</artifactId>
                 <version>${member.service.version}</version>
+            </dependency>
+
+            <!-- apache commons -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
+            </dependency>
+
+            <!-- fastjson -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
             <!-- spring -->
