--- a/member/pom.xml
+++ b/member/pom.xml
@@ -48,6 +48,8 @@
         <commons-lang3.version>3.5</commons-lang3.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <fastjson.version>1.2.23</fastjson.version>
+        <slf4j.version>1.7.22</slf4j.version>
+        <logback-classic.version>1.1.8</logback-classic.version>
     </properties>
 
     <dependencyManagement>
@@ -136,6 +138,18 @@
                 <groupId>javax.inject</groupId>
                 <artifactId>javax.inject</artifactId>
                 <version>${javax.inject.version}</version>
+            </dependency>
+
+            <!-- logger -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback-classic.version}</version>
             </dependency>
 
             <!-- junit -->
