--- a/member/member-core/src/main/resources/dbconfig.properties
+++ b/member/member-core/src/main/resources/dbconfig.properties
@@ -1,4 +1,4 @@
-jdbc_url=jdbc:mysql://localhost:3306/hippocrates
+jdbc_url=jdbc:mysql://localhost:3306/member?serverTimezone=UTC
 jdbc_user=root
 jdbc_password=1q2w3e4r
 driverClassName=com.mysql.jdbc.Driver
