--- a/member/pom.xml
+++ b/member/pom.xml
@@ -51,22 +51,29 @@
         <fastjson.version>1.2.23</fastjson.version>
         <slf4j.version>1.7.22</slf4j.version>
         <logback-classic.version>1.1.8</logback-classic.version>
+        <dozer.version>5.5.1</dozer.version>
+        <junit-version>4.12</junit-version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.medicinefreedom</groupId>
-                <artifactId>hippocrates</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.medicinefreedom</groupId>-->
+                <!--<artifactId>hippocrates</artifactId>-->
+                <!--<version>1.0.0-SNAPSHOT</version>-->
+                <!--<type>pom</type>-->
+                <!--<scope>import</scope>-->
+            <!--</dependency>-->
 
             <!-- self -->
             <dependency>
                 <groupId>org.medicinefreedom</groupId>
                 <artifactId>member-service-api</artifactId>
+                <version>${member.service.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.medicinefreedom</groupId>
+                <artifactId>member-common</artifactId>
                 <version>${member.service.version}</version>
             </dependency>
 
@@ -105,6 +112,13 @@
                 <artifactId>spring-jdbc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.version}</version>
+                <scope>test</scope>
+            </dependency>
+
 
             <!-- mybatis -->
             <dependency>
@@ -153,11 +167,23 @@
                 <version>${logback-classic.version}</version>
             </dependency>
 
+            <!-- dozer -->
+            <dependency>
+                <groupId>net.sf.dozer</groupId>
+                <artifactId>dozer</artifactId>
+                <version>${dozer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.dozer</groupId>
+                <artifactId>dozer-spring</artifactId>
+                <version>${dozer.version}</version>
+            </dependency>
+
             <!-- junit -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>3.8.1</version>
+                <version>${junit-version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
