提交 service api 相关代码。

--- a/member/member-service-api/pom.xml
+++ b/member/member-service-api/pom.xml
@@ -11,6 +11,17 @@
     <name>member api project</name>
     <url>http://maven.apache.org</url>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <finalName>member-service-api</finalName>
     </build>
