--- a/member/pom.xml
+++ b/member/pom.xml
@@ -52,17 +52,20 @@
         <slf4j.version>1.7.22</slf4j.version>
         <logback-classic.version>1.1.8</logback-classic.version>
         <dozer.version>5.5.1</dozer.version>
-        <junit-version>4.12</junit-version>
+        <junit.version>4.12</junit.version>
+        <cxf.version>3.1.9</cxf.version>
+        <validation-api.version>1.1.0.Final</validation-api.version>
+        <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <!--<dependency>-->
-                <!--<groupId>org.medicinefreedom</groupId>-->
-                <!--<artifactId>hippocrates</artifactId>-->
-                <!--<version>1.0.0-SNAPSHOT</version>-->
-                <!--<type>pom</type>-->
-                <!--<scope>import</scope>-->
+            <!--<groupId>org.medicinefreedom</groupId>-->
+            <!--<artifactId>hippocrates</artifactId>-->
+            <!--<version>1.0.0-SNAPSHOT</version>-->
+            <!--<type>pom</type>-->
+            <!--<scope>import</scope>-->
             <!--</dependency>-->
 
             <!-- self -->
@@ -74,6 +77,11 @@
             <dependency>
                 <groupId>org.medicinefreedom</groupId>
                 <artifactId>member-common</artifactId>
+                <version>${member.service.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.medicinefreedom</groupId>
+                <artifactId>member-core</artifactId>
                 <version>${member.service.version}</version>
             </dependency>
 
@@ -97,6 +105,17 @@
             </dependency>
 
             <!-- spring -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>commons-logging</artifactId>
+                        <groupId>commons-logging</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-beans</artifactId>
@@ -179,11 +198,36 @@
                 <version>${dozer.version}</version>
             </dependency>
 
+            <!-- cxf -->
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-transports-http</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
+
+            <!-- validation -->
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>${validation-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>${hibernate-validator.version}</version>
+            </dependency>
+
+
             <!-- junit -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>${junit-version}</version>
+                <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
