--- a/member/member-common/pom.xml
+++ b/member/member-common/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>member-common</artifactId>
     <packaging>jar</packaging>
-    <name>member-common Maven Webapp</name>
+    <name>member-common project</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
