--- a/member/member-service/pom.xml
+++ b/member/member-service/pom.xml
@@ -7,8 +7,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>member-service</artifactId>
-    <packaging>war</packaging>
-    <name>member-service Maven Webapp</name>
+    <packaging>jar</packaging>
+    <name>member-service project</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
